2009-09-28  6.5.6-6 Cristy  <quetzlzacatenango@image...>
  * Add splice() method to splice the background color into the image.

2009-04-01  6.5.1-1 Cristy  <quetzlzacatenango@image...>
  * Add virtualPixelMethod() method for image and options, required for
    distort().

2008-09-09  6.4.3-7 Cristy  <quetzlzacatenango@image...>
  * Use ImagesToBlob() rather than ImageToBlob() for writeImages().

2007-10-02  6.3.6-7 Cristy  <quetzlzacatenango@image...>
  * Define USE_MAP for Magick++/tests/colorHistogram.cpp (patch provided by
    albert chin <china@thewr...>).

2007-04-10  6.3.3-7 Cristy  <quetzlzacatenango@image...>
  * Add colorspaceType(RGBColorspace) to set RGB colorspace before an
    image read (useful to convert CMYK Potscript to RGB).

2006-02-05  6.3.2-3 Cristy  <quetzlzacatenango@image...>
  * Clear exception in throwException() method.

2006-01-16  6.3.2-0 Cristy  <quetzlzacatenango@image...>
  * Add extent() method to extend the image as defined by the geometry.

2003-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* demo/analyze.cpp (main): New program to demonstrate using the
	'analyze' process module.
	* demo/Makefile.am: Add rules to build analyze program.
	* lib/Image.cpp (process): New method to execute process modules.
	* lib/Image.cpp (attribute): New method to get and set named image
	attributes.

2003-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Color.cpp: Ensure that all non-default constructors set
	opacity to opaque.

2003-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (colorHistogram): If map key is not const,
        then implicit type conversion occurs.  Sun's C++ compiler doesn't
        seem to handle that.  The map key is now defined as const in
	the insert arguments.

2003-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am: Add build support for colorHistogram.cpp.
	* tests/colorHistogram.cpp: New test program to test retrieving